2004-12-15  Angus Leeming  <leeming-0hXrFu2P2+c@public.gmane.org>

	* configure.ac: add AC_FUNC_MKDIR test and code to
	#define mkdir should a non-POSIX version be found.

2004-12-04  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Most Makefile.am's: Move PCH_FLAGS to AM_CPP flags where
	possible.

2004-12-03  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Most Makefile.am's: Change to use AM_CPPFLAGS instead of
	INCLUDES since that has been deprecated by automake.

2004-11-25  Angus Leeming  <leeming@lyx.org>

	* README.Cygwin: new file, containing the current contents of
	README.Win32.

	* README.Win32: rewritten to explain why we don't currently
	provide formal support for a native Win32 port (other than
	one based on Cygwin) and how that may change in the future.

2004-11-29  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac: do not include broken_headers.h; do not check for
	strchr, memset and memmove

2004-11-04  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac: do not check for snprintf

2004-10-11  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* configure.ac: remove RPM_FRONTEND_DEPS

2004-10-07  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac: make maintainer mode active by default for
	development releases

2004-09-26  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* configure.ac: update for gtk 2.4

2004-09-23  Bennett Helm  <bennett.helm@fandm.edu>

	* README.MacOSX: update again

2004-09-22  Bennett Helm  <bennett.helm@fandm.edu>

	* README.MacOSX: update a bit

2004-09-04  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* configure.ac (AC_CONFIG_FILES): add src/client/Makefile

2004-09-03  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* configure.ac: print error message if uic or moc is not found
	and the qt frontend is used

2004-08-18  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* More pch work.

2004-08-03  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac: instead of the previous code (which does not